Add REST Endpoint to validate the signature of a TSP Response with a X.509 certificate